feat(contact-point): implements list endpoint and auth
