# apps/notifications/swagger/swagger.json
@@ -36,6 +36,26 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal server error, should probably be reported",
             "content": {
@@ -82,6 +102,26 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ValidationErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
                 }
               }
             }
@@ -144,6 +184,26 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal server error, should probably be reported",
             "content": {
@@ -188,6 +248,26 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ValidationErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
                 }
               }
             }
@@ -243,6 +323,104 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error, should probably be reported",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "ContactPoint"
+        ]
+      },
+      "get": {
+        "operationId": "getContactPoints",
+        "parameters": [
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "description": "Number of items per page",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns a paginated list of contact points",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContactPointListOutput"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Validation error responded when some request parameters are invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal server error, should probably be reported",
             "content": {
@@ -289,6 +467,26 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ValidationErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
                 }
               }
             }
@@ -361,6 +559,26 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
+                }
+              }
+            }
+          },
           "404": {
             "description": "Returns 404 if the contact point is not found",
             "content": {
@@ -419,6 +637,26 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized error responded when the user is not authenticated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden error responded when the user is not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenErrorResponse"
+                }
+              }
+            }
+          },
           "404": {
             "description": "Returns 404 if the contact point is not found",
             "content": {
@@ -464,6 +702,13 @@
   ],
   "servers": [],
   "components": {
+    "securitySchemes": {
+      "x-user-id": {
+        "type": "apiKey",
+        "in": "header",
+        "name": "x-user-id"
+      }
+    },
     "schemas": {
       "AlertCreateInput": {
         "type": "object",
@@ -473,10 +718,6 @@
               {
                 "type": "object",
                 "properties": {
-                  "userId": {
-                    "type": "string",
-                    "format": "uuid"
-                  },
                   "contactPointId": {
                     "type": "string",
                     "format": "uuid"
@@ -723,7 +964,6 @@
                   }
                 },
                 "required": [
-                  "userId",
                   "contactPointId",
                   "summary",
                   "description",
@@ -734,10 +974,6 @@
               {
                 "type": "object",
                 "properties": {
-                  "userId": {
-                    "type": "string",
-                    "format": "uuid"
-                  },
                   "contactPointId": {
                     "type": "string",
                     "format": "uuid"
@@ -978,7 +1214,6 @@
                   }
                 },
                 "required": [
-                  "userId",
                   "contactPointId",
                   "summary",
                   "description",
@@ -1002,10 +1237,6 @@
               {
                 "type": "object",
                 "properties": {
-                  "userId": {
-                    "type": "string",
-                    "format": "uuid"
-                  },
                   "contactPointId": {
                     "type": "string",
                     "format": "uuid"
@@ -1022,6 +1253,10 @@
                     "minLength": 3
                   },
                   "id": {
+                    "type": "string",
+                    "format": "uuid"
+                  },
+                  "userId": {
                     "type": "string",
                     "format": "uuid"
                   },
@@ -1260,12 +1495,12 @@
                   }
                 },
                 "required": [
-                  "userId",
                   "contactPointId",
                   "enabled",
                   "summary",
                   "description",
                   "id",
+                  "userId",
                   "status",
                   "createdAt",
                   "updatedAt",
@@ -1276,10 +1511,6 @@
               {
                 "type": "object",
                 "properties": {
-                  "userId": {
-                    "type": "string",
-                    "format": "uuid"
-                  },
                   "contactPointId": {
                     "type": "string",
                     "format": "uuid"
@@ -1296,6 +1527,10 @@
                     "minLength": 3
                   },
                   "id": {
+                    "type": "string",
+                    "format": "uuid"
+                  },
+                  "userId": {
                     "type": "string",
                     "format": "uuid"
                   },
@@ -1528,12 +1763,12 @@
                   }
                 },
                 "required": [
-                  "userId",
                   "contactPointId",
                   "enabled",
                   "summary",
                   "description",
                   "id",
+                  "userId",
                   "status",
                   "createdAt",
                   "updatedAt",
@@ -1582,6 +1817,40 @@
           "errors"
         ]
       },
+      "UnauthorizedErrorResponse": {
+        "type": "object",
+        "properties": {
+          "statusCode": {
+            "type": "number",
+            "minimum": 401,
+            "maximum": 401
+          },
+          "message": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "statusCode",
+          "message"
+        ]
+      },
+      "ForbiddenErrorResponse": {
+        "type": "object",
+        "properties": {
+          "statusCode": {
+            "type": "number",
+            "minimum": 403,
+            "maximum": 403
+          },
+          "message": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "statusCode",
+          "message"
+        ]
+      },
       "InternalServerErrorResponse": {
         "type": "object",
         "properties": {
@@ -1605,10 +1874,6 @@
           "data": {
             "type": "object",
             "properties": {
-              "userId": {
-                "type": "string",
-                "format": "uuid"
-              },
               "contactPointId": {
                 "type": "string",
                 "format": "uuid"
@@ -2068,10 +2333,6 @@
               "name": {
                 "type": "string"
               },
-              "userId": {
-                "type": "string",
-                "format": "uuid"
-              },
               "type": {
                 "type": "string",
                 "enum": [
@@ -2096,7 +2357,6 @@
             },
             "required": [
               "name",
-              "userId",
               "type",
               "config"
             ]
@@ -2114,10 +2374,6 @@
             "properties": {
               "name": {
                 "type": "string"
-              },
-              "userId": {
-                "type": "string",
-                "format": "uuid"
               },
               "type": {
                 "type": "string",
@@ -2144,15 +2400,19 @@
                 "type": "string",
                 "format": "uuid"
               },
+              "userId": {
+                "type": "string",
+                "format": "uuid"
+              },
               "createdAt": {},
               "updatedAt": {}
             },
             "required": [
               "name",
-              "userId",
               "type",
               "config",
               "id",
+              "userId",
               "createdAt",
               "updatedAt"
             ]
@@ -2177,6 +2437,107 @@
         "required": [
           "statusCode",
           "message"
+        ]
+      },
+      "ContactPointListOutput": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "type": {
+                  "type": "string",
+                  "enum": [
+                    "email"
+                  ]
+                },
+                "config": {
+                  "type": "object",
+                  "properties": {
+                    "addresses": {
+                      "type": "array",
+                      "items": {
+                        "type": "string",
+                        "format": "email"
+                      }
+                    }
+                  },
+                  "required": [
+                    "addresses"
+                  ]
+                },
+                "id": {
+                  "type": "string",
+                  "format": "uuid"
+                },
+                "userId": {
+                  "type": "string",
+                  "format": "uuid"
+                },
+                "createdAt": {},
+                "updatedAt": {}
+              },
+              "required": [
+                "name",
+                "type",
+                "config",
+                "id",
+                "userId",
+                "createdAt",
+                "updatedAt"
+              ]
+            }
+          },
+          "pagination": {
+            "type": "object",
+            "properties": {
+              "page": {
+                "type": "number",
+                "minimum": 0,
+                "exclusiveMinimum": false
+              },
+              "limit": {
+                "type": "number",
+                "minimum": 0,
+                "exclusiveMinimum": false,
+                "maximum": 1000,
+                "exclusiveMaximum": false
+              },
+              "total": {
+                "type": "number",
+                "minimum": 0,
+                "exclusiveMinimum": false
+              },
+              "totalPages": {
+                "type": "number",
+                "minimum": 0,
+                "exclusiveMinimum": false
+              },
+              "hasNextPage": {
+                "type": "boolean"
+              },
+              "hasPreviousPage": {
+                "type": "boolean"
+              }
+            },
+            "required": [
+              "page",
+              "limit",
+              "total",
+              "totalPages",
+              "hasNextPage",
+              "hasPreviousPage"
+            ]
+          }
+        },
+        "required": [
+          "data",
+          "pagination"
         ]
       },
       "ContactPointPatchInput": {
@@ -2217,5 +2578,10 @@
         ]
       }
     }
-  }
+  },
+  "security": [
+    {
+      "x-user-id": []
+    }
+  ]
 }
